package com.howtodoinjava;

/*
PROJECT NAME : design-patterns-java-maven
Module NAME: IntelliJ IDEA
Author Name : @ DRRONIDZ
DATE : 8/15/2021 1:26 AM
*/

public class Light {

    public void turnOn() {
        System.out.println("Light turned On !");
    }

    public void turnOff() {
        System.out.println("Light turned Off !");
    }
}
